--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-# baseURL       = "http://example.org/"
+baseURL       = "https://gwenaelrousselinnws.netlify.app/"
 languageCode  = "fr-FR"
 title         = "Roxo | NWS portfolio starter theme"
 theme         = "roxo"
